--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,7 +1,7 @@
 
 <div id="app">
   <script>
-    new app.App({
+    new app.Greet({
       target: document.getElementById('app'),
       props: {name: 'curious'}
     })
